tests/expected_invalid_grant_failure_unhandled.diag.out
<input>:16:25: error: failing expression must be handled with `try` or `match`
    public fn draw() -> Int {
                            ^
